fixed thoughts height on small width devices

--- a/frontend-pub/src/pages/Post/Post.module.css
+++ b/frontend-pub/src/pages/Post/Post.module.css
@@ -90,7 +90,7 @@
   max-height: 0;
   overflow: hidden;
   opacity: 0;
-  max-width: 1000px;
+  max-width: 1500px;
   transition: max-height 0.5s ease-in-out, opacity 0.3s ease-in-out,
     padding 0.3s ease-in-out;
 }
